<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20sp"
    tools:context=".ConfirmacionDatos">

    <TextView
        android:id="@+id/tvConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvConfirmar"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="casual"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

        <TextView
            android:id="@+id/tvConfNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvConfNombre"
            app:layout_constraintTop_toBottomOf="@id/tvConfirmar"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tvConfFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvConfFecha"
            app:layout_constraintTop_toBottomOf="@id/tvConfNombre"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tvConfTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvConfTel"
            app:layout_constraintTop_toBottomOf="@id/tvConfFecha"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tvConfEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvConfEmail"
            app:layout_constraintTop_toBottomOf="@id/tvConfTel"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tvConfDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvConfDescripcion"
            app:layout_constraintTop_toBottomOf="@id/tvConfEmail"
            android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnEditar"
        android:layout_height="wrap_content"
        android:text="@string/btnEditar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/tvConfirmar"
        app:layout_constraintLeft_toLeftOf="@id/tvConfirmar"
        android:layout_marginBottom="100dp"
        android:layout_width="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>